# Qt_chat

./: .gitignore  README.md
build-chat_server-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  chat_server  cmake_install.cmake  qtcsettings.cmake
build-chat_server-Qt_6_6_0_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-7971171a747062353fcc.json  cmakeFiles-v1-5f0d20b96d929ace4e58.json  codemodel-v2-ee40d4d83689d3a04bf1.json  directory-.-Debug-9f36dc1382c2b8799573.json  index-2023-07-13T17-38-41-0081.json  target-chat_server-Debug-3050f0ccccf7c60cdba2.json  target-chat_server_autogen-Debug-3aa0a1ca0d8528837723.json  target-chat_server_autogen_timestamp_deps-Debug-40b060a0a07072ea081e.json
build-chat_server-Qt_6_6_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-chat_server-Qt_6_6_0_for_macOS-Debug/chat_server_autogen/: deps
chat_server/: CMakeLists.txt  client.cpp  client.h  main.cpp  server.cpp  server.h
